<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <TextView
        android:id="@+id/hello_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/hello"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/question1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/q1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/question2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="72dp"
        android:text="@string/q2"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/question3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/q3"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/question4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q4"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <RadioGroup
        android:id="@+id/radioType"
        android:layout_width="340dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question1">

        <RadioButton
            android:id="@+id/type1"
            android:layout_width="74dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/q1a1"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="213dp" />

        <RadioButton
            android:id="@+id/type2"
            android:layout_width="104dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/q1a2"
            tools:layout_editor_absoluteX="170dp"
            tools:layout_editor_absoluteY="213dp" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioAmount"
        android:layout_width="340dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question2">

        <RadioButton
            android:id="@+id/amount1"
            android:layout_width="61dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/q2a1"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="213dp" />

        <RadioButton
            android:id="@+id/amount2"
            android:layout_width="62dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/q2a2"
            tools:layout_editor_absoluteX="170dp"
            tools:layout_editor_absoluteY="213dp" />

        <RadioButton
            android:id="@+id/amount3"
            android:layout_width="76dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/q2a3"
            tools:layout_editor_absoluteX="170dp"
            tools:layout_editor_absoluteY="213dp" />

        <RadioButton
            android:id="@+id/amount4"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/q2a4"
            tools:layout_editor_absoluteX="170dp"
            tools:layout_editor_absoluteY="213dp" />

        <RadioButton
            android:id="@+id/amount5"
            android:layout_width="72dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/q2a5"
            tools:layout_editor_absoluteX="170dp"
            tools:layout_editor_absoluteY="213dp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioStrength"
        android:layout_width="340dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question3">

        <RadioButton
            android:id="@+id/strength1"
            android:layout_width="74dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/q3a1"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="213dp" />

        <RadioButton
            android:id="@+id/strength2"
            android:layout_width="76dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/q3a2"
            tools:layout_editor_absoluteX="170dp"
            tools:layout_editor_absoluteY="213dp" />

        <RadioButton
            android:id="@+id/strength3"
            android:layout_width="76dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/q3a3"
            tools:layout_editor_absoluteX="170dp"
            tools:layout_editor_absoluteY="213dp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioTimespan"
        android:layout_width="340dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question4">

        <RadioButton
            android:id="@+id/timespan1"
            android:layout_width="74dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/q4a1"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="213dp" />

        <RadioButton
            android:id="@+id/timespan2"
            android:layout_width="76dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/q4a2"
            tools:layout_editor_absoluteX="170dp"
            tools:layout_editor_absoluteY="213dp" />

        <RadioButton
            android:id="@+id/timespan3"
            android:layout_width="76dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/q4a3"
            tools:layout_editor_absoluteX="170dp"
            tools:layout_editor_absoluteY="213dp" />
    </RadioGroup>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <Button
        android:id="@+id/open_activity_button"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/ready"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>